--- a/src/components/page.style.scss
+++ b/src/components/page.style.scss
@@ -1,1 +1,10 @@
 @import "src/assets/scss/page";
+#root {
+  @include absolute(0, 0, 0, 0);
+}
+.page {
+  &-master {
+    @include absolute(1.1rem, 0, 0, 0);
+    @include overflow(y);
+  }
+}
